--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="overlay">
-        <nav class="navbar">
+        <nav class="navbar" id="navbar">
             <div class="container">
                 <div class="logo">
                     <img src="./image/music-light Logo.png" alt="logo engange Music">
@@ -33,11 +33,12 @@
         </nav>
         <div class="header-content">
             <div class="container">
-                <p class="welcome">Welcome to</p>
+                <p class="welcome" id="change">Welcome to</p>
                 <h1>Music Company</h1>
                 <p class="paragrapth">We're the biggest, best equipped and most advanced building company in the greater
                     Las Vegas area.</p>
                 <a href="#" class="learn-btn">LEARN MORE</a>
+                <span class="loader"></span>
  
             </div>
         </div></div>
@@ -218,6 +219,8 @@
         <div class="clr"></div>
 
     </footer>
+    <!-- my js file -->
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
