--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="loading"  id="loading" >
+        <span class="loaders"></span>
+    </div>
     <header class="header">
         <div class="overlay">
         <nav class="navbar" id="navbar">
