--- a/about.html
+++ b/about.html
@@ -56,18 +56,98 @@
             </nav>
             <!-- end nav bar -->
 
-            <div class="header-content " >
+            <div class="header-content ">
                 <div class="container ">
                     <div class="mb-5" id="change"></div>
 
-                    <div class="content d-flex align-items-center">
-                        <h1><a href="index.html">Home</a>/ About </h1>
+                    <div class="content pt-5 d-flex align-items-center justify-content-center flex-column">
+                        <h1>About</h1>
+                        <p><a href="index.html">Home</a>/ About </p>
                     </div>
                 </div>
             </div>
         </div>
     </header>
     <!-- end header -->
+    <!--  our story -->
+    <section class="ourstory">
+
+        <div class="container row ">
+            <div class="img col-md-9 d-flex align-items-center ">
+                <img src="./image/aboutimage/second section.jpg" width="120%" alt="our story">
+            </div>
+            <div class="desc col-md-3 d-flex justify-content-center flex-column ">
+
+                <h3>Our Story</h3>
+                <p class="mt-3">We have been operating for over 30 years and are Members of The Federation of Master
+                    Builders. We
+                    work on
+                    projects big and small from small residential extensions to full house and commercial builds and we
+                    are
+                    registered NHBC house builders.</p>
+                <ul>
+                    <li class="mt-3"> <i class="fa-solid fa-heart " style="color: #ce5c9f;"></i>
+                        Aliquam fermentum lorem quis posuere mattis.</li>
+                    <li class="mt-3"><i class="fa-solid fa-heart" style="color: #ce5c9f;"></i>
+                        Sed mollis sapien erat id pellentesque libero. </li>
+                    <li class="mt-3"><i class="fa-solid fa-heart" style="color: #ce5c9f;"></i>
+                        Pellentesque nisl id semper bibendum.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- our story  -->
+    <!--Features-->
+    <section class="Features d-flex align-items-center justify-content-center flex-column">
+        <i class="fa-regular fa-flag mt-5" style="color: #ce5c9f;"></i>
+        <h3 class="mt-5">Features</h3>
+        <p class="mt-3">What we're great at.</p>
+        <div class="container row mt-5 mb-5 ">
+            <div class="col-md-4">
+                <h5>Facilities</h5>
+                <p>Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque
+                    pellentesque. Nunc feugiat felis vitae aliquet consequat. Aliquam ullamcorper accumsan lectus, a
+                    tempor turpis interdum sed. Donec ac faucibus nunc.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h5>Best Equipment</h5>
+                <p>Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque
+                    pellentesque. Nunc feugiat felis vitae aliquet consequat. Aliquam ullamcorper accumsan lectus, a
+                    tempor turpis interdum sed. Donec ac faucibus nunc.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h5>Incredible Location</h5>
+                <p>Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque
+                    pellentesque. Nunc feugiat felis vitae aliquet consequat. Aliquam ullamcorper accumsan lectus, a
+                    tempor turpis interdum sed. Donec ac faucibus nunc.
+                </p>
+            </div>
+            <div class="col-md-4 mt-3">
+                <h5>Facilities</h5>
+                <p>Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque
+                    pellentesque. Nunc feugiat felis vitae aliquet consequat. Aliquam ullamcorper accumsan lectus, a
+                    tempor turpis interdum sed. Donec ac faucibus nunc.
+                </p>
+            </div>
+            <div class="col-md-4 mt-3">
+                <h5>Best Equipment</h5>
+                <p>Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque
+                    pellentesque. Nunc feugiat felis vitae aliquet consequat. Aliquam ullamcorper accumsan lectus, a
+                    tempor turpis interdum sed. Donec ac faucibus nunc.
+                </p>
+            </div>
+            <div class="col-md-4 mt-3">
+                <h5>Incredible Location</h5>
+                <p>Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque
+                    pellentesque. Nunc feugiat felis vitae aliquet consequat. Aliquam ullamcorper accumsan lectus, a
+                    tempor turpis interdum sed. Donec ac faucibus nunc.
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- Features-->
     <!-- footer -->
     <footer class="footer">
         <img src="./image/music-light Logo.png" alt="logo engange Music">
