--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
 
     <!-- my js file -->
     <script src="./js/main.js"></script>
+    <script src="./js/loadscreen.js"></script>
 </body>
 
 </html>
