--- a/ourwork.html
+++ b/ourwork.html
@@ -60,15 +60,31 @@
             <div class="header-content " >
                 <div class="container ">
                     <div class="mb-5" id="change"></div>
-                    <div class="content d-flex align-items-center">
-                        <h1><a href="index.html">Home</a>/ Our Work  </h1>
+                    <div class="content pt-5 d-flex align-items-center justify-content-center flex-column">
+                        <h1> Our Work  </h1>
+                        <p class="mt-3">Our latest albums are here.</p>
                     </div>
                 </div>
             </div>
         </div>
     </header>
     <!-- end header -->
+    <!-- album -->
+    <section class="album">
+        <div class="container d-flex align-items-center ">
 
+            <div class="Powerful col-md-4">
+                <a href="" class="text-white">Powerful Album</a>
+            </div>
+            <div class=" Unique col-md-4">
+                <a href="" class="text-white">Unique Album</a>
+            </div>
+            <div class=" New col-md-4">
+                <a href=""  class="text-white"> New Album</a>
+            </div>
+        </div>
+    </section>
+    <!-- album -->
 
          <!-- footer -->
     <footer class="footer">
